--- a/index.html
+++ b/index.html
@@ -24,6 +24,47 @@
             <h1>Seja Bem-Vindo!</h1>
             <p>Aqui você encontrará informações sobreo uso de HTML5 semântico para desenvolvimento da WEB</p>
         </section>
+
+        <section id="sobre">
+            <h2>Sobre o HTML5 semântico</h2>
+            <p>O HTML5 semântico é uma evolucção da linguagen HTML que permite aos desenvolvedores criar estruturas mais significativas e ricas em conteúdo para seus sites e aplicativos.</p>
+        </section>
+
+
+        <section id="linguagens">
+            <h2>Outras linguagens associadas</h2>
+            <ul>
+                <li>Hyper Text Markup Language - HTML</li>
+                <li>Cascading Style Sheet - CSS</li>
+                <li>JavaScript - JS</li>
+            </ul>
+
+        </section>
+
+
+        <section id="contato">
+            <H2>Fale conosco</H2>
+            <form>
+               <label for="nome">Nome:</label>
+               <input type="text" name="nome" id="nome">
+
+               <label for="email">E-mail:</label>
+               <input type="text" name="nome" id="email">
+
+               <label for="mensagem">Mensagem:</label>
+               <textarea type="text" name="nome" id="mensagem"></textarea>
+                
+             <div>
+               <label for="checkbox">Desejo receber informações sobre HTML5 por email:</label>
+               <input type="checkbox" name="checkbox" id="checkbox">
+             </div>
+
+             <input id="button" type="submit" value="Enviar">
+
+            </form>
+          
+        </section>
+
     </main>
 
     <footer>
