--- a/index.html
+++ b/index.html
@@ -206,21 +206,47 @@
 
       </div>
 
-      <div class="projetosite">
-        <div class="fotoprojeto">
-          <img src="./image/projetn.png" alt="Imagem site">
-        </div>
-        <div class="textoprojeto">
-          <h2>Projeto Site com Currículo</h2>
-          <h3 class="textinprojeto">
-            <p>No início, eu tinha apenas conhecimentos básicos de codificação. Sabia o básico de HTML, como estruturar elementos, criar tags e atributos. Também tinha algumas noções de CSS, como definir estilos para elementos, aplicar cores e alterar fontes. Com essas bases, embarquei nessa aventura de criar um currículo.</p><br>
-            <p>Comecei definindo a estrutura geral do currículo em HTML, utilizando tags de classes e id. Organizei as informações de forma clara e legível, garantindo que os dados fossem facilmente acessíveis.</p><br>
-            <p>Em seguida, apliquei estilos utilizando CSS para dar vida ao currículo. Defini fontes adequadas, escolhi uma paleta de cores harmoniosa e ajustei o layout para torná-lo agradável aos olhos. Utilizei classes e seletores para segmentar elementos específicos e aplicar estilos personalizados.</p><br>
-            <p>Durante o processo, aprendi muitas coisas novas. Aprendi a utilizar propriedades CSS para posicionar elementos, criar efeitos de transição e animações sutis. Descobri como utilizar imagens de fundo para adicionar um toque visual interessante. Também aprendi a importância de tornar um currículo responsivo, adaptando-o a diferentes tamanhos de tela para uma melhor experiência do usuário.</p><br>
-            <p>Ao finalizar o projeto, senti uma grande satisfação ao ver o resultado. Foi gratificante ver um currículo bem estruturado, visualmente atraente e totalmente funcional. Além disso, ganhei confiança em minhas habilidades de codificação e me senti inspirado para explorar ainda mais o mundo da criação web</p> <div id="Projetosid"></div>
-          </h3>
-        </div>
-      </div>
+
+
+
+
+
+
+  <div class="code-editor">
+    <div class="header">
+      <span class="title">Projeto Site</span>
+     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 2" class="icon"><g stroke-width="0" id="SVGRepo_bgCarrier"></g><g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier"> <path stroke-linecap="round" stroke-width="2" stroke="#4C4A" d="M6 6L18 18"></path> <path stroke-linecap="round" stroke-width="2" stroke="#4C4F5A" d="M18 6L6 18"></path> </g></svg>
+    </div>
+    <div class="editor-content">
+      <code class="code">
+        <p><span class="color-0"></span> <span></span></p>
+
+        <p class="property">
+          <p><span class="color-2">Dsenvolvimento<p class="color-0">    <p class="color-0">No início, eu tinha apenas conhecimentos básicos de codificação. Sabia o básico de HTML, como estruturar elementos, criar tags e atributos. Também tinha algumas noções de CSS, como definir estilos para elementos, aplicar cores e alterar fontes. Com essas bases, embarquei nessa aventura de criar um currículo.</p><br>
+            <p class="color-0">Comecei definindo a estrutura geral do currículo em HTML, utilizando tags de classes e id. Organizei as informações de forma clara e legível, garantindo que os dados fossem facilmente acessíveis.</p><br>
+            <p class="color-0">Em seguida, apliquei estilos utilizando CSS para dar vida ao currículo. Defini fontes adequadas, escolhi uma paleta de cores harmoniosa e ajustei o layout para torná-lo agradável aos olhos. Utilizei classes e seletores para segmentar elementos específicos e aplicar estilos personalizados.</p><br>
+            <p class="color-0">Durante o processo, aprendi muitas coisas novas. Aprendi a utilizar propriedades CSS para posicionar elementos, criar efeitos de transição e animações sutis. Descobri como utilizar imagens de fundo para adicionar um toque visual interessante. Também aprendi a importância de tornar um currículo responsivo, adaptando-o a diferentes tamanhos de tela para uma melhor experiência do usuário.</p><br>
+            <p class="color-0">Ao finalizar o projeto, senti uma grande satisfação ao ver o resultado. Foi gratificante ver um currículo bem estruturado, visualmente atraente e totalmente funcional. Além disso, ganhei confiança em minhas habilidades de codificação e me senti inspirado para explorar ainda mais o mundo da criação web</p> <div id="Projetosid"></div>
+          </span></p><br>
+
+
+          
+</div>
+</div>
+
+
+<img src="./image/Captura de tela 2023-05-26 154425.png" class="fotositte">
+
+  
+
+
+
+
+
+
+
+
+
 
       <div id="Projetosid"></div>
 
